# habij-backend

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yaml  codeql.yml
habij/: asgi.py  settings.py  urls.py  wsgi.py
journal/: admin.py  models.py  serializers.py  urls.py  views.py
journal/migrations/: 0001_initial.py
users/: admin.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
